--- a/block-image/index.html
+++ b/block-image/index.html
@@ -39,7 +39,7 @@
     <div id="image">
       <table id="main"></table>
     </div>
-    <pre id="result"></pre>
+    <div id="result"></div>
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
